--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -20,6 +20,7 @@
   contents:
     - year: 2023
       items: 
+        - Gold Prize in NeurIPS 2023 Competion - Single-Cell Perturbations <a href="https://www.kaggle.com/competitions/open-problems-single-cell-perturbations/overview">[Link]</a>
         - Sichuan University Tecent Scholarship (Special Grade)
     - year: 2022
       items: 
@@ -52,11 +53,14 @@
         - International Conference on Learning Representations (ICLR)
         - International Conference on Machine Learning (ICML)
         - International Conference on Computer Vision (ICCV)
+        - European Conference on Computer Vision (ECCV)
         - IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR)
         - AAAI Conference on Artificial Intelligenc (AAAI)
+        - ACM Multimedia Conference (ACMMM)
         - Chinese Journal of Computers (计算机学报)
         - International Conference on Applied Artificial Intelligence (AICONF)
         - Asian Conference on Machine Learning (ACML)
+        - Asian Conference on Computer Vision (ACCV)
         - Chinese Conference on Pattern Recognition and Computer Vision (PRCV)
         - International Conference on Pattern Recognition (ICPR)
         - International Conference on Image and Graphics (ICIG)
