--- a/_config.yml
+++ b/_config.yml
@@ -273,7 +273,7 @@ display_categories: ['blockquotes'] # these categories will be displayed on the 
 
 scholar:
 
-  last_name: [Li, Li*]
+  last_name: [Li, Li*, Li#]
   first_name: [Yunfan]
 
   style: apa
