--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -55,9 +55,8 @@
         - International Conference on Computer Vision (ICCV)
         - European Conference on Computer Vision (ECCV)
         - IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR)
-        - AAAI Conference on Artificial Intelligenc (AAAI)
+        - AAAI Conference on Artificial Intelligence (AAAI)
         - ACM Multimedia Conference (ACMMM)
-        - Chinese Journal of Computers (计算机学报)
         - International Conference on Applied Artificial Intelligence (AICONF)
         - Asian Conference on Machine Learning (ACML)
         - Asian Conference on Computer Vision (ACCV)
@@ -68,10 +67,12 @@
     - title: Journal Reviewer
       items:
         - IEEE Transactions on Pattern Analysis and Machine Intelligence
+        - IEEE Transactions on Image Processing
         - IEEE Transactions on Neural Networks and Learning Systems
         - "IEEE Transactions on Systems, Man and Cybernetics: Systems"
         - IEEE Transactions on Circuits and Systems for Video Technology
         - IEEE Transactions on Emerging Topics in Computing
+        - Chinese Journal of Computers (计算机学报)
         - Neural Networks
         - BMC Bioinformatics
         - CAAI Transactions on Intelligence Technology
@@ -79,9 +80,11 @@
         - ​IET Computer Vision
         - Machine Vision and Applications
         - Engineering Applications of Artificial Intelligence
+        - Scientific Report
         - IEEE Access
         - SN Computer Science
         - SN Machine Learning
     - title: Talks
       items:
-        - "VALSE 2021 Workshop: Unsupervised Learning"
+        - "2025 AI for Life Science Seminar"
+        - "2021 VALSE Workshop: Unsupervised Learning"
